infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  tls:
    - hosts:
        - www.keyssoft.xyz
        - keyssoft.xyz
      secretName: echo-tls
  rules:
    - host: www.keyssoft.xyz
      http:
        paths:
          - path: /api/posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 3000
          - path: /api/comments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 3000
          - path: /api/query/?(.*)
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 3000
          - path: /ws/?(.*)
            pathType: Prefix
            backend:
              service:
                name: messenger-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: basics-frontend-srv
                port:
                  number: 80
